# CommApp

./: .gitmodules
commapp-cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
commapp-cpp/src/: logger.cpp  logger.h  service.cpp  service.h  stdafx.h
commapp-cpp/src/amqp/: channel.cpp  channel.h  dispatcher.cpp  dispatcher.h  text_chat_message.cpp  text_chat_message.h
commapp-cpp/src/app/: inputtextedit.cpp  inputtextedit.h  list_widget_delegate.cpp  list_widget_delegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
commapp-cpp/src/app/login/: login_dialog.cpp  login_dialog.h  login_dialog.ui
commapp-cpp/src/service/: context.cpp  context.h  qservice.cpp  qservice.h  service.cpp  service.h
commapp-cs/: .gitignore  AddFriendWindow.xaml  AddFriendWindow.xaml.cs  App.xaml  App.xaml.cs  LoginWindow.xaml  LoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowHandler.cs  MessageTabContent.cs  commapp-cs.csproj
commapp-cs/CommunicationsLib/: CommunicationsLib.csproj  MessageConverter.cs  MessageInfo.cs  Receiver.cs  Sender.cs
commapp-cs/CommunicationsLib/MsgParser/: ImageConverter.cs  MessageInfo.cs  MessageJson.cs  MessagesonSerializer.cs  message.schema.json
commapp-cs/CommunicationsLib/MsgServices/: Receiver.cs  Sender.cs
